test_suite/tests/ui/remote/missing_field.stderr
error[E0063]: missing field `b` in initializer of `remote::S`
  --> tests/ui/remote/missing_field.rs:11:18
   |
11 | #[serde(remote = "remote::S")]
   |                  ^^^^^^^^^^^ missing `b`
